fix: build errors & current detailed infos weird gap

--- a/src/app/home/_components/style.module.css
+++ b/src/app/home/_components/style.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  gap: 2rem;
+  gap: 1rem;
   background-color: var(--foreground);
   color: var(--background);
   padding: 1rem 2rem;
